--- a/Hotel/View_layer/ViewProductUser.xaml
+++ b/Hotel/View_layer/ViewProductUser.xaml
@@ -1,20 +1,46 @@
-﻿<UserControl x:Class="Hotel.View_layer.ViewUsers"
+﻿<UserControl x:Class="Hotel.View_layer.ViewProductUser"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
              xmlns:local="clr-namespace:Hotel.View_layer"
              mc:Ignorable="d" 
-             d:DesignHeight="550" d:DesignWidth="800">
+             d:DesignHeight="640" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="50"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="100"/>
         </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="250"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0"
+                                    Orientation="Horizontal">
+                <StackPanel.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
+                        <GradientStop Color="{StaticResource degradadooro1}" Offset="0"/>
+                        <GradientStop Color="{StaticResource degradadooro5}" Offset="1"/>
+                    </LinearGradientBrush>
+                </StackPanel.Background>
+                <fa:IconImage Icon="CommentDollar"
+                                          Height="24"
+                                          Width="24"
+                                          Foreground="{StaticResource tittleColor4}"
+                                          Margin="35,0,10,0"/>
+                <TextBlock Text="Propuestas Cotizaciones"
+                                       Foreground="{StaticResource tittleColor4}"
+                                       FontSize="17"
+                                       FontFamily="Alegreya Bold"
+                                       VerticalAlignment="Center"/>
 
-        <Grid Grid.Row="0" Margin="10 0 10 0">
+            </StackPanel>
+        </Grid>
+        <Grid Grid.Row="1" Margin="10 0 10 0">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                 <fa:IconImage Icon="Search" Height="20" Width="20" Foreground="{StaticResource tittleColor2}" Margin="5"/>
                 <TextBox x:Name="txtBusqueda"
@@ -33,8 +59,8 @@
                              TextChanged="txtBusqueda_TextChanged"/>
             </StackPanel>
         </Grid>
-        <Grid Grid.Row="1">
-            <DataGrid x:Name="listBoxEmpleados" AutoGenerateColumns="False" Margin="10 0 10 10" 
+        <Grid Grid.Row="2">
+            <DataGrid x:Name="listBoxCotizaciones" AutoGenerateColumns="False" Margin="10 0 10 10" 
           Background="{StaticResource tittleColor5}"
            IsReadOnly="True" VerticalGridLinesBrush="{StaticResource tittleColor1}" HorizontalGridLinesBrush="{StaticResource tittleColor1}" HeadersVisibility="Column">
 
@@ -60,14 +86,14 @@
                 </DataGrid.Resources>
 
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Nombre" Binding="{Binding NombreEmpleado}" Width="*"/>
-                    <DataGridTextColumn Header="Apellidos" Binding="{Binding Apellidos}" Width="*"/>
-                    <DataGridTextColumn Header="CI" Binding="{Binding CI}" Width="*"/>
-                    <DataGridTextColumn Header="Direccion" Binding="{Binding Direccion}" Width="*"/>
-                    <DataGridTextColumn Header="Contacto" Binding="{Binding Celular}" Width="*"/>
-                    <DataGridTextColumn Header="Correo" Binding="{Binding Correo}" Width="*"/>
-                    <DataGridTextColumn Header="Departamento" Binding="{Binding Departamento}" Width="*"/>
-                    <DataGridTextColumn Header="Cuenta" Binding="{Binding EstadoCuenta}" Width="*"/>
+
+                    <DataGridTextColumn Header="Producto" Binding="{Binding NombreProducto}" Width="*"/>
+                    <DataGridTextColumn Header="Descripcion" Binding="{Binding Descripcion}" Width="*"/>
+                    <DataGridTextColumn Header="Precio Unitario" Binding="{Binding PrecioUnit}" Width="*"/>
+                    <DataGridTextColumn Header="Tamaño" Binding="{Binding Tamaño}" Width="*"/>
+                    <DataGridTextColumn Header="Categoria" Binding="{Binding Categoria.NombreCategoria}" Width="*"/>
+                    <DataGridTextColumn Header="Proveedor" Binding="{Binding Proveedor.NombreProv}" Width="*"/>
+
                 </DataGrid.Columns>
                 <DataGrid.ColumnHeaderStyle>
                     <Style TargetType="DataGridColumnHeader">
@@ -81,15 +107,17 @@
                 </DataGrid.ColumnHeaderStyle>
             </DataGrid>
         </Grid>
-        <Grid Grid.Row="2">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="center">
-                <Button Content="Habilitar"
-                            Click="CambiarEstadoCuentaButton_Click"
-                            Width="230"
+        <Grid Grid.Row="3">
+            <Grid Grid.Row="3">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="center">
+                    <Button Content="Aprobar"
+                            Click="CambiarEstadoCotizacionButton_Click"
+                            Width="250"
                             Height="40"
                             Margin="10"
                             Style="{StaticResource CustomButtonStyle}"/>
-            </StackPanel>
+                </StackPanel>
+            </Grid>
         </Grid>
     </Grid>
 </UserControl>
