--- a/Hotel/View_layer/ViewNewOrder.xaml
+++ b/Hotel/View_layer/ViewNewOrder.xaml
@@ -9,6 +9,7 @@
              d:DesignHeight="450" d:DesignWidth="900">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="40"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="*"/>
@@ -16,9 +17,42 @@
             <RowDefinition Height="70"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center">
-            <StackPanel Orientation="Horizontal" Margin="0 0 10 0" Height="25">
-                <Label Content="Dias Maximos de entrega:" Foreground="{StaticResource tittleColor1}" FontFamily="Alegreya medium" FontSize="14"/>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="190"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <StackPanel Grid.Column="0"
+                                    Orientation="Horizontal">
+                <StackPanel.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
+                        <GradientStop Color="{StaticResource degradadooro1}" Offset="0"/>
+                        <GradientStop Color="{StaticResource degradadooro5}" Offset="1"/>
+                    </LinearGradientBrush>
+                </StackPanel.Background>
+                <fa:IconImage Icon="CommentDollar"
+                                          Height="24"
+                                          Width="24"
+                                          Foreground="{StaticResource tittleColor4}"
+                                          Margin="35,0,10,0"/>
+                <TextBlock Text="Orden Compra"
+                                       Foreground="{StaticResource tittleColor4}"
+                                       FontSize="17"
+                                       FontFamily="Alegreya Bold"
+                                       VerticalAlignment="Center"/>
+
+            </StackPanel>
+
+        </Grid>
+        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
+            <StackPanel Orientation="Horizontal" Margin="0 0 20 0" Height="30">
+                <Label Content="Tipo de compra:" Foreground="{StaticResource tittleColor1}" FontFamily="Alegreya medium" FontSize="14"/>
+                <RadioButton x:Name="rbDirecta" Content="Directa" GroupName="tipoCompra" Foreground="{StaticResource tittleColor1}" FontFamily="Alegreya medium" FontSize="14" Margin="5" Checked="msgDirecta"/>
+                <RadioButton x:Name="rbProgramada" Content="Programada" GroupName="tipoCompra" Foreground="{StaticResource tittleColor1}" FontFamily="Alegreya medium" FontSize="14" Margin="5" Checked="msgProgramada"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Margin="0 0 10 5" Height="25">
+                <Label Content="Dias:" Foreground="{StaticResource tittleColor1}" FontFamily="Alegreya medium" FontSize="14"/>
                 <TextBox x:Name="txtTiempoEntrega" FontSize="14" Margin="10 0 0 0"
                              Width="100"
                              Background="Transparent"
@@ -28,10 +62,10 @@
                              CaretBrush="{StaticResource tittleColor1}"
                              BorderBrush="{StaticResource tittleColor1}"
                              BorderThickness="0,0,0,2"/>
+                
             </StackPanel>
-            
         </StackPanel>
-        <Grid Grid.Row="1" HorizontalAlignment="Left">
+        <Grid Grid.Row="2" HorizontalAlignment="Left">
             <StackPanel Orientation="Horizontal">
                 <fa:IconImage Icon="Search" Height="20" Width="20" Foreground="{StaticResource tittleColor2}" Margin="5"/>
                 <TextBox x:Name="txtBuscarCotizacion"
@@ -50,7 +84,7 @@
                              TextChanged="txtBuscarCotizacion_TextChanged"/>
             </StackPanel>
         </Grid>
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
@@ -129,7 +163,7 @@
                     </DataGrid.Resources>
 
                     <DataGrid.Columns>
-                        
+
                         <DataGridTextColumn Header="Nombre Producto" Binding="{Binding NombreProducto}" />
                         <DataGridTextColumn Header="Precio Unitario" Binding="{Binding PrecioUnit}" />
                         <DataGridTextColumn Header="Cantidad" Binding="{Binding Cantidad}" />
@@ -155,7 +189,7 @@
                 </DataGrid>
             </Grid>
         </Grid>
-        <Grid Grid.Row="3">
+        <Grid Grid.Row="4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
@@ -174,7 +208,7 @@
                 <TextBlock x:Name="txtMontoTotal" Foreground="{StaticResource tittleColor1}" HorizontalAlignment="Left" Width="200" Text="{Binding MontoTotal}" Margin="5"/>
             </StackPanel>
         </Grid>
-        <Grid Grid.Row="4">
+        <Grid Grid.Row="5">
             <Button x:Name="btnTerminarOrdenCompra"
                     Content="Terminar Orden Compra"
                     Grid.Column="0"
